--- a/src/components/Portfolio.astro
+++ b/src/components/Portfolio.astro
@@ -29,7 +29,7 @@ const portfolioResto = portfolio.slice(5);
     <h2 class="text-black text-3xl md:text-4xl font-semibold text-center mb-12">
         Visión artística
     </h2>
-    <p class="text-center mb-12">Capturando momentos de tranquilidad y grandes emociones con un lente minimalista y elegante.</p>
+    <p class="text-(--secondary-color) text-center mb-12">Capturando momentos de tranquilidad y grandes emociones con un lente minimalista y elegante.</p>
     
     {/* Grid responsivo - Primeras 5 imágenes */}
     <div class="grid gap-4 mb-8" style="grid-template-columns: 1fr; @media (min-width: 768px) { grid-template-columns: repeat(4, 1fr); }">
