--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,9 +1,9 @@
-<section class="bg-[#E8DCD2] py-20 px-8">
+<section class="bg-[#E8DCD2] py-20 px-8" id="contacto">
   <div class="text-center mb-12">
-    <h2 class="text-2xl text-black">
+    <h2 class="text-2xl text-black scroll-animate">
       Vamos a crear algo <span class="font-bold">único juntos</span>
     </h2>
-    <p class="mt-4 max-w-xl mx-auto text-gray-700">
+    <p class="mt-4 max-w-xl mx-auto text-gray-700 scroll-animate">
       Ya sea que tengas un proyecto en específico o simplemente quieres
       saludarme, no dudes en contactarme.
     </p>
