--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,5 +1,6 @@
 <section
   class="bg-(--primary-color) text-(--secondary-color) px-4 md:px-8 flex h-screen flex-col justify-between"
+  id="inicio"
 >
   <div
     class="max-w-6xl mx-auto flex flex-col text-center flex-1 justify-center"
