--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -35,7 +35,7 @@
 
   {/* Menú desktop */}
   <ul class="hidden md:flex gap-4">
-    <li><a href="#home" class="hover:opacity-80 transition">Inicio</a></li>
+    <li><a href="#inicio" class="hover:opacity-80 transition">Inicio</a></li>
     <li>
       <a href="#portfolio" class="hover:opacity-80 transition">Portafolio</a>
     </li>
@@ -53,7 +53,7 @@
     class="text-end absolute top-full left-0 right-0 bg-(--accent-color) flex-col gap-6 p-6 md:hidden shadow-lg z-50 max-h-0 overflow-hidden opacity-0"
   >
     <li>
-      <a href="#home" class="hover:opacity-80 transition block text-lg text-black font-medium">Inicio</a>
+      <a href="#inicio" class="hover:opacity-80 transition block text-lg text-black font-medium">Inicio</a>
     </li>
     <li>
       <a href="#portfolio" class="hover:opacity-80 transition block text-lg text-black font-medium"
