--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -35,15 +35,15 @@
 
   {/* Menú desktop */}
   <ul class="hidden md:flex gap-4">
-    <li><a href="#inicio" class="hover:opacity-80 transition">Inicio</a></li>
+    <li><a href="#inicio" class="hover:opacity-80 transition hover:underline underline-offset-4">Inicio</a></li>
     <li>
-      <a href="#portafolio" class="hover:opacity-80 transition">Portafolio</a>
+      <a href="#portafolio" class="hover:opacity-80 transition hover:underline underline-offset-4">Portafolio</a>
     </li>
     <li>
-      <a href="#servicios" class="hover:opacity-80 transition">Servicios</a>
+      <a href="#servicios" class="hover:opacity-80 transition hover:underline underline-offset-4">Servicios</a>
     </li>
     <li>
-      <a href="#contacto" class="hover:opacity-80 transition">Contacto</a>
+      <a href="#contacto" class="hover:opacity-80 transition hover:underline underline-offset-4">Contacto</a>
     </li>
   </ul>
 
@@ -53,16 +53,16 @@
     class="text-end absolute top-full left-0 right-0 bg-(--accent-color) flex-col gap-6 p-6 md:hidden shadow-lg z-50 max-h-0 overflow-hidden opacity-0"
   >
     <li>
-      <a href="#inicio" class="hover:opacity-80 transition block text-lg text-black font-medium">Inicio</a>
+      <a href="#inicio" class="hover:opacity-80 transition block text-lg text-black font-medium hover:underline underline-offset-4">Inicio</a>
     </li>
     <li>
-      <a href="#portafolio" class="hover:opacity-80 transition block text-lg text-black font-medium">Portafolio</a>
+      <a href="#portafolio" class="hover:opacity-80 transition block text-lg text-black font-medium hover:underline underline-offset-4">Portafolio</a>
     </li>
     <li>
-      <a href="#servicios" class="hover:opacity-80 transition block text-lg text-black font-medium">Servicios</a>
+      <a href="#servicios" class="hover:opacity-80 transition block text-lg text-black font-medium hover:underline underline-offset-4">Servicios</a>
     </li>
     <li>
-      <a href="#contacto" class="hover:opacity-80 transition block text-lg text-black font-medium">Contacto</a>
+      <a href="#contacto" class="hover:opacity-80 transition block text-lg text-black font-medium hover:underline underline-offset-4">Contacto</a>
     </li>
   </ul>
   </div>
